--- a/package.json
+++ b/package.json
@@ -54,26 +54,31 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
-    "commander": "^11.1.0",
-    "inquirer": "^8.2.6",
-    "chalk": "^4.1.2",
-    "ora": "^5.4.1",
+    "@modelcontextprotocol/server-filesystem": "^2025.7.29",
+    "@modelcontextprotocol/server-github": "^2025.4.8",
+    "@modelcontextprotocol/server-memory": "^2025.8.4",
     "axios": "^1.6.0",
-    "fs-extra": "^11.1.1",
-    "handlebars": "^4.7.8",
-    "simple-git": "^3.20.0",
-    "dotenv": "^16.3.1",
-    "joi": "^17.11.0",
-    "semver": "^7.5.4",
-    "update-notifier": "^7.0.0",
     "boxen": "^5.1.2",
+    "chalk": "^4.1.2",
+    "commander": "^11.1.0",
+    "dotenv": "^16.3.1",
+    "enhanced-postgres-mcp-server": "^1.0.1",
+    "figlet": "^1.7.0",
+    "fs-extra": "^11.1.1",
     "gradient-string": "^2.0.2",
-    "figlet": "^1.7.0"
+    "handlebars": "^4.7.8",
+    "inquirer": "^8.2.6",
+    "joi": "^17.11.0",
+    "ora": "^5.4.1",
+    "puppeteer-mcp-server": "^0.7.2",
+    "semver": "^7.5.4",
+    "simple-git": "^3.20.0",
+    "update-notifier": "^7.0.0"
   },
   "devDependencies": {
-    "jest": "^29.6.2",
     "eslint": "^8.52.0",
     "eslint-config-standard": "^17.1.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
