--- a/package.json
+++ b/package.json
@@ -63,16 +63,19 @@
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "enhanced-postgres-mcp-server": "^1.0.1",
+    "express": "^4.18.2",
     "figlet": "^1.7.0",
     "fs-extra": "^11.1.1",
     "gradient-string": "^2.0.2",
     "handlebars": "^4.7.8",
     "inquirer": "^8.2.6",
     "joi": "^17.11.0",
+    "js-yaml": "^4.1.0",
     "ora": "^5.4.1",
     "puppeteer-mcp-server": "^0.7.2",
     "semver": "^7.5.4",
     "simple-git": "^3.20.0",
+    "socket.io": "^4.7.5",
     "update-notifier": "^7.0.0"
   },
   "devDependencies": {
