feat: v4.1.0 - 整合進階功能與最佳實踐
🎯 基於成功專案的最佳實踐整合:
- SmartMonitor: 來自 PixelForge Studio 的即時效能監控
- EnterpriseLogger: 來自 AI Freelancer Tools 的企業級日誌系統
- SmartRouter: 來自 PixelForge Studio 的智能負載平衡路由
- MySQL + Zeabur 完整資料庫整合
- Claude Code AI 深度整合

✨ 新功能:
- 支援 --smart-monitor, --enterprise-logger, --smart-router 選項
- 支援 --all-features 一鍵啟用所有進階功能
- 整理並統一模板檔案結構到 lib/templates/
- 新增詳細的進階功能使用指南

📁 結構優化:
- 統一所有模板到 lib/templates/ 目錄
- 修復 createStructure 遞歸路徑問題
- 更新 package.json 和 README.md

🚀 升級到 v4.1.0，提供企業級開發工具鏈

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mursfoto/cli",
-  "version": "4.0.0",
-  "description": "Mursfoto AutoDev Factory 4.0 - 統一架構 + AI 驅動的智慧自動化開發工具",
+  "version": "4.1.0",
+  "description": "Mursfoto AutoDev Factory 4.1 - 整合進階功能 (SmartMonitor, EnterpriseLogger, SmartRouter) + MySQL/Zeabur + Claude Code AI",
   "main": "bin/mursfoto.js",
   "bin": {
     "mursfoto": "./bin/mursfoto.js",
@@ -28,12 +28,19 @@
     "generator",
     "enterprise",
     "microservices",
-    "api-gateway",
+    "api-gateway", 
     "n8n",
     "workflow",
     "devtools",
     "boilerplate",
-    "scaffold"
+    "scaffold",
+    "mysql",
+    "zeabur",
+    "smart-monitor",
+    "enterprise-logger",
+    "smart-router",
+    "pixelforge",
+    "ai-freelancer-tools"
   ],
   "author": "Mursfoto Team",
   "license": "MIT",
@@ -69,10 +76,9 @@
   "files": [
     "bin/",
     "lib/",
-    "templates/",
     "docs/",
     "README.md",
-    "LICENSE",
+    "LICENSE", 
     "CHANGELOG.md"
   ],
   "preferGlobal": true,
